# postgresql-fastapi-nextjs

./: .env  Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/: config.py  main.py
backend/src/database/: __init__.py  engine.py  get_db.py
backend/src/database/alembic/: env.py
backend/src/database/alembic/versions/: 33e651a6c3a9_initial_setup.py  f3a6c421f766_adding.py
backend/src/database/entities/: Todo.py  __init__.py
backend/src/database/entities/shared/: BaseEntity.py  IntegerIdEntity.py  base.py  config.py
pgadmin/: pgpass  servers.json
